<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="conteudo_banner_inicial">Banner inicial dos pacotes</string>
    <string name="brasil">Brasil</string>
    <string name="especial">Especial</string>
    <string name="imagem_indicativa_do_pacote">Imagem indicativa do pacote</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="imagem_pacote">imagem do pacote</string>
    <string name="nome_no_cartao">Nome no Cartão</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="ano_cartao">AA</string>
    <string name="mes_cartao">MM</string>
    <string name="numero_do_cartao">Número do Cartão</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="marcara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="banner_inicial_do_resumo_da_compra">banner inicial do resumo da compra</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="parabens_banner_inicial">Parabéns!</string>
</resources>